close mult language subdirectory

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-theme-bootstrap"
 
 # Multilingual mode
 defaultContentLanguage = "zh-cn"
-defaultContentLanguageInSubdir = true
+defaultContentLanguageInSubdir = false
 
 # Pagination
 paginate = 10
