add baidu verification

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -54,7 +54,7 @@ customJS = []
 [siteVerification]
   google = ""
   bing = ""
-  baidu = ""
+  baidu = "code-NTfzacnFYd"
   baiduUnion = "" # Baidu Union
   so = ""
   sogou = ""
