--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -52,7 +52,7 @@ customJS = []
 
 # Site verification
 [siteVerification]
-  google = ""
+  google = "9Qpc8B088mjrQPtVx38X3LVnltbTV3m"
   bing = ""
   baidu = "code-NTfzacnFYd"
   baiduUnion = "" # Baidu Union
