sogou verification method change file

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -57,7 +57,7 @@ customJS = []
   baidu = "code-NTfzacnFYd"
   baiduUnion = "" # Baidu Union
   so = ""
-  sogou = "jH04sz0dUU"
+  sogou = ""
   shenma = ""
 
 [creativeCommons]
