--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -90,7 +90,7 @@ customJS = []
   #wechat = "images/reward/wechat.png"
 
 [share]
-  addThis = "ra-60bcc43f59f2d04f" # AddThis pubid.
+  # addThis = "ra-60bcc43f59f2d04f" # AddThis pubid.
 
 [fontSize] # Comment or remove this settings to disable font size switcher.
   # extraSmall = ".8rem"
