update product config

--- a/config/production/config.toml
+++ b/config/production/config.toml
@@ -1,2 +1,2 @@
-baseURL = "/"
-googleAnalytics = ""
+baseURL = "https://www.printlove.cn"
+googleAnalytics = "9Qpc8B088mjrQPtVx38X3LVnltbTV3m-Y7tz90nQ5qw"
