--- a/config/_default/author.toml
+++ b/config/_default/author.toml
@@ -1,7 +1,7 @@
-name = "潇洒哥和黑大帅"
+name = "潇洒哥 - 老苗"
 # avatar = "images/profile.png" # Avatar image. Default to "images/profile.webp".
-avatar = "images/logo.jpg"
+avatar = "images/laomiao.jpg"
 bio = "Go基础系列、从0开发微服务（后续）、杂七杂八。"
 # company = "Null"
-# location = "Earth"
+location = "西安"
 # about = "https://domain.tld" # The external about page. The internal about page will be used if not set.
