--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-theme-bootstrap"]
 	path = themes/hugo-theme-bootstrap
-	url = https://github.com.cnpmjs.org/razonyang/hugo-theme-bootstrap
+	url = https://github.com/razonyang/hugo-theme-bootstrap
