--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -38,7 +38,7 @@ poweredBy = false # Whether to show powered by.
 # seriesCount = 10 # The number of series shown in sidebar.
 
 # Custom CSS and JS
-customCSS = ["css/json2go.css", "https://cdn.bootcss.com/highlight.js/9.15.9/styles/idea.min.css"]
+customCSS = ["https://cdn.bootcss.com/highlight.js/9.15.9/styles/idea.min.css"]
 customJS = []
 
 # tocWordCount = 280 # TOC is displayed only if the post's word count exceeds this value.
