--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -79,7 +79,7 @@ customJS = [
   repo = "miaogaolin/printlove-comment"
   #issueTerm = "pathname" # pathname, url, title, og:title
   #label = "comment"
-  theme = "github-light" # github-light, github-dark, preferred-color-scheme, github-dark-orange, icy-dark, dark-blue, photon-dark.
+  theme = "auto" # github-light, github-dark, preferred-color-scheme, github-dark-orange, icy-dark, dark-blue, photon-dark.
 
 [search]
   paginate = 5 # Pagination. Default to 10.
