增加xml转json工具

--- a/config/_default/menu.zh-cn.toml
+++ b/config/_default/menu.zh-cn.toml
@@ -24,3 +24,7 @@
   parent = "dropdown"
   name = "YAML转GO"
   url = "/tools/yaml2go"
+[[main]]
+  parent = "dropdown"
+  name = "XML转JSON"
+  url = "/tools/xml2json"
