增加sql转es工具

--- a/config/_default/menu.zh-cn.toml
+++ b/config/_default/menu.zh-cn.toml
@@ -28,3 +28,7 @@
   parent = "dropdown"
   name = "XML转JSON"
   url = "/tools/xml2json"
+[[main]]
+  parent = "dropdown"
+  name = "SQL转ElasticSearch"
+  url = "/tools/sql2es"
