--- a/config/_default/social.toml
+++ b/config/_default/social.toml
@@ -1,18 +1,18 @@
-# email = "user@domain.tld"
+email = "2825873215@qq.com"
 # facebook = "yourfacebookusername"
-# github = "yourgithubusername"
+github = "miaogaolin"
 # gitlab = "yourgitlabusername"
 # linkedin = "yourlinkedinusername"
 # stackoverflow = "yourstackoverflowuserid"
-# twitter = "yourtwitterusername"
+twitter = "laomiao_"
 # weibo = "yourweibousername"
-# zhihu = "yourzhihuusername"
+zhihu = "fan-zhong-li-luo-xie"
 # instagram = "yourinstagramusername"
 # quora = "yourquorausername"
 # tumblr = "yourtumblrusername"
 # reddit = "yourredditusername"
 # telegram = "yourtelegramusername"
-# qq = "yourqqnumber"
+qq = "2825873215"
 # dockerhub = "yourdockerhubusername"
 # bitbucket = "yourbitbucketworkspaceid"
 # medium = "yourmediumusername" # Medium username or custom domain(e.g. https://custom.domain.tld).
