--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -17,7 +17,7 @@ palette = "blue-gray" # Default palette. Optional.
 # color = "dark" # light, dark or dynamic. Default to dynamic.
 
 # fullWidth = true # Full width.
-# fixedHeader = false # Turn on/off fixed header.
+fixedHeader = false # Turn on/off fixed header.
 
 # dateFormat = "Jan 2, 2006"
 
