--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -34,7 +34,7 @@ poweredBy = true # Whether to show powered by.
 # recentPostCount = 10 # The number of recent posts shown in sidebar.
 # relatedPostCount = 10 # The number of related posts.
 # categoryCount = 10 # The number of categories shown in sidebar.
-# tagCount = 10 # The number of tags shown in sidebar.
+tagCount = 30 # The number of tags shown in sidebar.
 # seriesCount = 10 # The number of series shown in sidebar.
 
 # Custom CSS and JS
