update theme style

--- a/config/_default/menu.zh-cn.toml
+++ b/config/_default/menu.zh-cn.toml
@@ -30,5 +30,5 @@
   url = "/tools/xml2json"
 [[main]]
   parent = "dropdown"
-  name = "SQL转ElasticSearch"
+  name = "SQL转ES"
   url = "/tools/sql2es"
