--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -32,5 +32,5 @@ enableEmoji = true
 
 [taxonomies]
   category = "categories"
-  # series = "series"
-  # tag = "tags"
+  series = "series"
+  tag = "tags"
