--- a/themes/hugo-theme-bootstrap/package.json
+++ b/themes/hugo-theme-bootstrap/package.json
@@ -34,7 +34,7 @@
     "file-loader": "^6.1.1",
     "line-column": "^1.0.2",
     "mini-css-extract-plugin": "^1.6.1",
-    "node-sass": "^5.0.0",
+    "node-sass": ">=7.0.0",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.7.0",
     "postcss": "^8.3.5",
