--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/api/sql2gorm",
-      "dest": "/api/sql2gorm.go"
+      "src": "/api/tool",
+      "dest": "/api/tool.go"
     }
   ]
 }
