add sql to mongodb

--- a/config/_default/menu.zh-cn.toml
+++ b/config/_default/menu.zh-cn.toml
@@ -1,34 +1,38 @@
 [[main]]
-  name = "关于我"
-  url = "/posts/me"
+name = "关于我"
+url = "/posts/me"
 [[main]]
-  name = "在线工具"
-  identifier = "dropdown"
+name = "在线工具"
+identifier = "dropdown"
 [[main]]
-  parent = "dropdown"
-  name = "JSON转GO"
-  url = "/tools/json2go"
+parent = "dropdown"
+name = "JSON转GO"
+url = "/tools/json2go"
 [[main]]
-  parent = "dropdown"
-  name = "SQL转GORM"
-  url = "/tools/sql2gorm"
+parent = "dropdown"
+name = "SQL转GORM"
+url = "/tools/sql2gorm"
 [[main]]
-  parent = "dropdown"
-  name = "SQL转go-zero"
-  url = "/tools/sql2gozero"
+parent = "dropdown"
+name = "SQL转go-zero"
+url = "/tools/sql2gozero"
 [[main]]
-  parent = "dropdown"
-  name = "SQL转entgo"
-  url = "/tools/sql2ent"
+parent = "dropdown"
+name = "SQL转entgo"
+url = "/tools/sql2ent"
 [[main]]
-  parent = "dropdown"
-  name = "YAML转GO"
-  url = "/tools/yaml2go"
+parent = "dropdown"
+name = "YAML转GO"
+url = "/tools/yaml2go"
 [[main]]
-  parent = "dropdown"
-  name = "XML转JSON"
-  url = "/tools/xml2json"
+parent = "dropdown"
+name = "XML转JSON"
+url = "/tools/xml2json"
 [[main]]
-  parent = "dropdown"
-  name = "SQL转ES"
-  url = "/tools/sql2es"
+parent = "dropdown"
+name = "SQL转ES"
+url = "/tools/sql2es"
+[[main]]
+parent = "dropdown"
+name = "SQL转MongoDB"
+url = "/tools/sql2mongodb"
